fix alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 body {
   width: 100%;
   height: 100%;
+  max-width: 100vw;
   font-family: $font-family;
   background-color: $primary-medium;
 }
