--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,7 @@
 
 .header {
   width: 100%;
+  max-width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
