--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,39 +3,34 @@
 
 .hero {
   position: relative;
-  width: 100vw;
+  width: 70%;
   height: 60vh;
+
   display: flex;
-  justify-content: space-between;
-  gap: 0;
-  align-items: center;
+  justify-content: center;
+  align-items: start;
   margin: auto;
 
   @include tablet {
-    width: 100%;
+    width: 97%;
   }
 
   @include desktop {
+    max-width: 60vw;
     width: 64%;
   }
 
   &__background {
-    width: 100%;
-    height: 100%;
-    background-image: url("../../assets/images/hero-background3.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: right;
-    background-position-y: 0;
+    width: 80%;
+    height: auto;
+    object-fit: contain;
+    object-position: right center;
   }
-
   &__leaderboard-container {
-    width: 30%;
-    height: 100%;
-    background-image: url("../../assets/images/leaderboard.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: left;
-    background-position-y: 0;
+    width: 24.1%;
+
+    height: auto;
+    object-fit: contain;
+    object-position: left center;
   }
 }
